# NN_based_dynamic_scheduling

./: README.md
auxiliary_analysis/simulation_codes/nn_simulation/: CMakeLists.txt  (+2 more)
bsde_solver/: README.md  nn_main.jl  nn_main_cont.jl
bsde_solver/config_100dim/: config_100dim.json  costs_pathwise_100dim.csv
bsde_solver/config_17dim/: config_17dim.json  theta_hourly_17dim.csv
bsde_solver/config_2dim/: config_2dim.json
bsde_solver/config_30dim/: zeta_matrix_hourly_30dim_path.csv
bsde_solver/config_3dim/: cost_3dim.csv
bsde_solver/config_3dim_var/: config_3dim_var.json
bsde_solver/config_50dim/: config_50dim.json  costs_pathwise_50dim.csv
data/: Test_Problems_Data_Analysis.ipynb  csv_export.py
deep_splitting/: Net (33).py  Net.py  README.md  equation (29).py  equation.py  main (27).py  main.py  sample_path_generator (1).ipynb  solver.py
deep_splitting/500dim/: hourly_limiting_lambda_500dim_pathwise.csv  hourly_total_cost_500dim_pathwise.csv  hourly_zeta_500dim_pathwise.csv  mu_hourly_500dim_pathwise.csv
secondary_analysis/mdp_solution/: README.md
secondary_analysis/simulation_codes/ctmc_simulation/aux_main/: CMakeLists.txt  ctmc_sim.cpp  ctmc_sim.h
secondary_analysis/simulation_codes/ctmc_simulation/aux_main/config_main/: cdf_17dim.csv  config_main.json  hourly_total_cost_17dim.csv
secondary_analysis/simulation_codes/ctmc_simulation/aux_var2/: CMakeLists.txt  ctmc_sim.cpp  ctmc_sim.h
secondary_analysis/simulation_codes/ctmc_simulation/aux_var2/config_var2/: config_var2.json  holding_cost_var2.csv  initialization_var2.csv  upper_bound_var2.csv
(+285 files in other folders)
