cmake_minimum_required(VERSION 3.20)
project(prdes)
find_package(OpenMP)
include_directories(/main_test_auxiliary_mdp/json/include)
add_definitions(-std=c++11)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-fopenmp")
add_executable(prdes ctmc_sim.cpp ctmc_sim.h)
target_include_directories(prdes PRIVATE ~/include)